# libsync-legacy

./: LICENSE  README.md
src/libmew/: Makefile.am  connector.c  connector.h  connector_ftp.c  connector_ftp.h  connector_webdav.c  connector_webdav.h  connectormodule.c  crypto.c  crypto.h  curl.c  curl.h  metadata.c  metadata.h  setup.py
src/mewc/: Makefile.am  config.ini  mewc.py
src/mewc/inih/examples/: example  ini_example.c  test.ini
src/mewd/: Makefile.am  main.c  mewd.py
src/mewd/.ropeproject/: globalnames
